[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interviewiq-server"
version = "0.1.0"
description = "InterviewIQ backend — AI technical interview assistant (FastAPI + LangGraph)"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

# Phase 1 runtime dependencies (see docs/TASKS.md T01 and docs/SETUP_GUIDE.md).
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "langgraph>=0.2",
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
files = ["app"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
